McStas-2.5_CPU_MPICC/Test_Pol_Guide_mirror/compile_stdout.txt
INFO: No output directory specified (--dir)
INFO: Using directory: "Test_Pol_Guide_mirror_20200226_192128"
INFO: Regenerating c-file: Test_Pol_Guide_mirror.c
Warning: Using DEFINITION parameter of component Pol_guide_mirror() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Guide_mirror/Test_Pol_Guide_mirror.instr:79
  rPar={ 0 , 0.0219 , 6.07 , 1 , 0.003 }
Warning: Using DEFINITION parameter of component Pol_guide_mirror() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Guide_mirror/Test_Pol_Guide_mirror.instr:79
  rUpPar={ MIRRORREF , 0.0219 , 6.07 , 1 , 0.003 }
Warning: Using DEFINITION parameter of component Pol_guide_mirror() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Guide_mirror/Test_Pol_Guide_mirror.instr:79
  rDownPar={ MIRRORREF , 0.0219 , 6.07 , 1 , 0.003 }
CFLAGS=
INFO: Recompiling: ./Test_Pol_Guide_mirror.out
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../optics/Pol_guide_mirror.comp:120:19: warning: ISO C99 requires whitespace after the macro name
   if (Table_Read(rUpParPtr, rUpPar, 1) <= 0) {
                   ^
./Test_Pol_Guide_mirror.c: In function 'mcraytrace':
./Test_Pol_Guide_mirror.c:11296:7: error: 'polariserIn' undeclared (first use in this function)
 MCNUM W = mccguide1_W;
       ^~~~~~~~~~~
./Test_Pol_Guide_mirror.c:11296:7: note: each undeclared identifier is reported only once for each function it appears in
